# shelly-renderer

./: .readthedocs.yaml  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.py  test_shelly.py
.github/workflows/: pylint.yml  unittest.yml
_renderers/: shelly.py
docs/: Makefile  conf.py  index.rst  modules.rst  requirements.txt  shelly.rst
